<resources>
    <string name="app_name">Pokemon Builder</string>
    <string name="main_list">Pokemon List</string>
    <string name="add_pokemon">Add Pokemon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="pokemon_list">Pokemon List</string>
    <string name="pokedex">Pokedex</string>
    <string name="weight">Weight:</string>
    <string name="height">Height:</string>
    <string name="gender">Gender:</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="item">Item:</string>
    <string name="ability">Ability:</string>
    <string name="move">Move:</string>
    <string name="nature">Nature:</string>
    <string name="select_pokemon">Select Pokemon</string>
    <string name="iv">IV\'s</string>
    <string name="ev">EV\'s</string>
    <string name="hp">HP</string>
    <string name="et_hint">0</string>
    <string name="attack">Attack</string>
    <string name="defense">Defense</string>
    <string name="special_attack">Special Attack</string>
    <string name="special_defense">Special Defense</string>
    <string name="speed">Speed</string>
    <string name="genderless">Genderless</string>
    <string name="def">Def</string>
    <string name="att">Att</string>
    <string name="sp">Sp</string>
    <string name="spa">SpA</string>
    <string name="spd">SpD</string>
</resources>
