<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/pokemon_list"
                android:onClick="toList"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/add_pokemon"
                android:onClick="toSearch"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/pokedex_detail_tab"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/pokedex"
                android:onClick="toPokedex"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"/>

        </LinearLayout>

        <TextView
            android:id="@+id/pd_detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/pd_detail_normal"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"/>

            <!--<ImageView-->
                <!--android:id="@+id/pd_detail_shiny"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"/>-->

        </LinearLayout>

        <TextView
            android:id="@+id/pd_detail_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:layout_marginStart="16dp"/>

        <TextView
            android:id="@+id/pd_detail_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:layout_marginStart="16dp"/>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="toInput"
        app:backgroundTint="?attr/colorPrimary"
        android:tint="@color/colorPrimaryDark"
        app:srcCompat="@android:drawable/ic_input_add" />

</android.support.design.widget.CoordinatorLayout>