<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:onClick="toList"
            android:text="@string/pokemon_list"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_add_tab"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:onClick="toSearch"
            android:text="@string/add_pokemon"
            android:textColor="@color/white" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:onClick="toPokedex"
            android:text="@string/pokedex"
            android:textColor="@color/white" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/select_pokemon"
                android:textAllCaps="false"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!--Gender-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gender" />

                <CheckBox
                    android:id="@+id/chk_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/male" />

                <CheckBox
                    android:id="@+id/chk_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/female" />
            </LinearLayout>

            <!--// Item-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/item" />

                <Spinner
                    android:id="@+id/spn_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!--// Ability-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/ability" />

                <Spinner
                    android:id="@+id/spn_ability"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!--// Moves-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/move" />

                <Spinner
                    android:id="@+id/spn_move1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/move" />

                <Spinner
                    android:id="@+id/spn_move2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/move" />

                <Spinner
                    android:id="@+id/spn_move3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/move" />

                <Spinner
                    android:id="@+id/spn_move4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!--Nature-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/nature" />

                <Spinner
                    android:id="@+id/spn_nature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="#c0c0c0" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1,2">

                <TableRow>

                    <TextView />

                    <TextView
                        android:gravity="center"
                        android:text="@string/iv" />

                    <TextView
                        android:gravity="center"
                        android:text="@string/ev" />
                </TableRow>

                <TableRow>

                    <TextView android:text="@string/hp" />

                    <EditText
                        android:id="@+id/et_hp_iv"
                        android:gravity="center"
                        android:hint="@string/et_hint"
                        android:inputType="phone" />

                    <EditText
                        android:id="@+id/et_hp_ev"
                        android:gravity="center"
                        android:hint="@string/et_hint"
                        android:inputType="phone" />
                </TableRow>

                <TableRow>

                    <TextView android:text="@string/attack" />

                    <EditText
                        android:id="@+id/et_att_iv"
                        android:gravity="center"
                        android:hint="@string/et_hint"
                        android:inputType="phone" />

                    <EditText
                        android:id="@+id/et_att_ev"
                        android:gravity="center"
                        android:hint="@string/et_hint"
                        android:inputType="phone" />
                </TableRow>

                <TableRow>

                    <TextView android:text="@string/defense" />

                    <EditText
                        android:id="@+id/et_def_iv"
                        android:gravity="center"
                        android:hint="@string/et_hint"
                        android:inputType="phone" />

                    <EditText
                        android:id="@+id/et_def_ev"
                        android:gravity="center"
                        android:hint="@string/et_hint"
                        android:inputType="phone" />
                </TableRow>

                <TableRow>

                    <TextView android:text="@string/special_attack" />

                    <EditText
                        android:id="@+id/et_spa_iv"
                        android:gravity="center"
                        android:hint="@string/et_hint"
                        android:inputType="phone" />

                    <EditText
                        android:id="@+id/et_spa_ev"
                        android:gravity="center"
                        android:hint="@string/et_hint"
                        android:inputType="phone" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_marginEnd="16dp"
                        android:text="@string/special_defense" />

                    <EditText
                        android:id="@+id/et_spd_iv"
                        android:gravity="center"
                        android:hint="@string/et_hint"
                        android:inputType="phone" />

                    <EditText
                        android:id="@+id/et_spd_ev"
                        android:gravity="center"
                        android:hint="@string/et_hint"
                        android:inputType="phone" />
                </TableRow>

                <TableRow>

                    <TextView android:text="@string/speed" />

                    <EditText
                        android:id="@+id/et_sp_iv"
                        android:gravity="center"
                        android:hint="@string/et_hint"
                        android:inputType="phone" />

                    <EditText
                        android:id="@+id/et_sp_ev"
                        android:gravity="center"
                        android:hint="@string/et_hint"
                        android:inputType="phone" />
                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/btn_add"
                android:onClick="addPokemon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/add_pokemon"
                android:textAllCaps="false"
                android:textSize="20sp" />

            <!--&lt;!&ndash;Ev's and IV's&ndash;&gt;-->
            <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:orientation="horizontal">-->

            <!--&lt;!&ndash;First Column&ndash;&gt;-->
            <!--<LinearLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="vertical">-->
            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content" />-->
            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="HP"/>-->
            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Attack"/>-->
            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Defense"/>-->
            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Special Attack"/>-->
            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Special Defense"/>-->
            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Speed"/>-->
            <!--</LinearLayout>-->

            <!--&lt;!&ndash;Second Column&ndash;&gt;-->
            <!--<LinearLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="vertical"-->
            <!--android:layout_weight="1"-->
            <!--android:gravity="center_horizontal">-->
            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="IV's"/>-->
            <!--<EditText-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="0"/>-->
            <!--<EditText-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="0"/>-->
            <!--<EditText-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="0"/>-->
            <!--<EditText-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="0"/>-->
            <!--<EditText-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="0"/>-->
            <!--<EditText-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="0"/>-->
            <!--</LinearLayout>-->

            <!--&lt;!&ndash;Third Column&ndash;&gt;-->
            <!--<LinearLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="vertical"-->
            <!--android:layout_weight="1"-->
            <!--android:gravity="center_horizontal">-->
            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="EV's"-->
            <!--android:layout_gravity="center_horizontal"/>-->
            <!--<EditText-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="0"/>-->
            <!--<EditText-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="0"/>-->
            <!--<EditText-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="0"/>-->
            <!--<EditText-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="0"/>-->
            <!--<EditText-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="0"/>-->
            <!--<EditText-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="0"/>-->
            <!--</LinearLayout>-->

            <!--</LinearLayout>-->

        </LinearLayout>

    </ScrollView>


</LinearLayout>