<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.ListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_list_tab"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:onClick="toList"
            android:text="@string/pokemon_list"
            android:textColor="@color/white" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:onClick="toAdd"
            android:text="@string/add_pokemon"
            android:textColor="@color/white" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:onClick="toPokedex"
            android:text="@string/pokedex"
            android:textColor="@color/white" />

    </LinearLayout>

    <TextView
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="bla"
        android:gravity="center"/>

    <Button
        android:id="@+id/natures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="natures"
        android:onClick="deleteDB"/>

    <Button
        android:id="@+id/items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="items"
        android:onClick="deleteDB"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/moves1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="moves1"
            android:onClick="deleteDB"/>

        <Button
            android:id="@+id/moves2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="moves2"
            android:onClick="deleteDB"/>

        <Button
            android:id="@+id/moves3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="moves3"
            android:onClick="deleteDB"/>

        <Button
            android:id="@+id/moves4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="moves4"
            android:onClick="deleteDB"/>
    </LinearLayout>

    <ListView
        android:id="@+id/lv_saved_pokemon"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>

</LinearLayout>